--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: "Bai Jamjuree", sans-serif;
+html,
+body,
+body > div:first-child,
+div#__next,
+div#__next > div {
+  height: 100%;
 }
+
+body { 
+  font-family: "Bai Jamjuree", sans-serif;
+  background: url('/bg.jpg') no-repeat center center fixed;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} 
