--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,3 +23,43 @@ body {
   height: 100%;
   max-height: 500px;
 }
+
+.icon-container {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
+
+.AudioRecorder {
+  display: flex;
+  justify-content: center;
+}
+
+.mic-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+}
+
+@keyframes scaleIn {
+  from {
+    transform: scale(.5, .5);
+    opacity: .5;
+  }
+  to {
+    transform: scale(2.5, 2.5);
+    opacity: 0;
+  }
+}
+
+.circle {
+  border-radius: 50%;
+  background-color: #f294a9;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  opacity: 0;
+  animation: scaleIn 2s infinite cubic-bezier(.36, .11, .89, .32);
+}
